fixed white space on follow us page

--- a/src/Pages/FollowUs.css
+++ b/src/Pages/FollowUs.css
@@ -14,7 +14,7 @@
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 8em;
+    padding-top: 2em;
  }
 
  .socialIcon {
